--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-starter",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "type": "module",
   "scripts": {
@@ -11,20 +11,22 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
-    "@vueuse/core": "^11.1.0",
-    "pinia": "^2.2.4",
-    "vue": "^3.5.11",
-    "vue-router": "^4.4.5"
+    "@vueuse/core": "^13.1.0",
+    "@vueuse/shared": "^13.1.0",
+    "@vueuse/math": "^13.1.0",
+    "pinia": "^3.0.2",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@tsconfig/node20": "^20.1.4",
-    "@types/node": "^20.16.11",
-    "@vitejs/plugin-vue": "^5.1.4",
-    "@vue/tsconfig": "^0.5.1",
-    "npm-run-all2": "^6.2.3",
-    "typescript": "~5.5.4",
-    "unplugin-vue-router": "^0.10.8",
-    "vite": "^5.4.8",
-    "vue-tsc": "^2.1.6"
+    "@tsconfig/node20": "^20.1.5",
+    "@types/node": "^20.17.46",
+    "@vitejs/plugin-vue": "^5.2.4",
+    "@vue/tsconfig": "^0.7.0",
+    "npm-run-all2": "^8.0.1",
+    "typescript": "~5.8.3",
+    "unplugin-vue-router": "^0.12.0",
+    "vite": "^6.3.5",
+    "vue-tsc": "^2.2.10"
   }
 }
