--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "unplugin-vue-router": "^0.12.0",
     "vite": "^6.3.5",
     "vue-tsc": "^2.2.10"
+  },
+  "engines": {
+    "node": "^20.5.0 || >=22.0.0"
   }
 }
